--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: UKgrid
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: The UK National Electricity Transmission System Dataset
+Version: 0.1.9000
+Author: Rami Krispin
+Maintainer: Rami Krispin <rami.krispin@gmail.com>
+Description: A time series dataset of the UK national grid demand for electricity since 2011
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Depends:
+  R (>= 3.0.2)
