--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: The UK National Electricity Transmission System Dataset
 Version: 0.1.9000
 Author: Rami Krispin
 Maintainer: Rami Krispin <rami.krispin@gmail.com>
-Description: A time series of the of the national grid (high-voltage electric power transmission network)
-in the UK since 2011
+Description: A time series of the of the national grid (high-voltage electric power transmission network) in the UK since 2011
 License: MIT
 Encoding: UTF-8
 LazyData: true
