updated the package description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: The UK National Electricity Transmission System Dataset
 Version: 0.1.0
 Author: Rami Krispin
 Maintainer: Rami Krispin <rami.krispin@gmail.com>
-Description: A time series of the national grid demand (high-voltage electric power transmission network) in the UK since 2011
-License: MIT
+Description: A time series of the national grid demand (high-voltage electric power transmission network) in the UK since 2011.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends:
@@ -15,6 +15,7 @@ Imports:
   dplyr(>= 0.7.5),
   lubridate (>= 1.6.0),
   magrittr (>= 1.5),
+  rlang (>= 0.2.1),
   xts (>= 0.10-1),
   zoo (>= 1.8-0)
 Suggests:
