--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,5 @@ Suggests:
     TSstudio
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
+URL: https://github.com/RamiKrispin/UKgrid
+BugReports: https://github.com/RamiKrispin/UKgrid/issues
