--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Title: The UK National Electricity Transmission System Dataset
 Version: 0.1.1
 Author: Rami Krispin
 Maintainer: Rami Krispin <rami.krispin@gmail.com>
+Authors@R: person("Rami", "Krispin", email = "rami.krispin@gmail.com",
+  role = c("aut", "cre"))
 Description: A time series of the national grid demand (high-voltage electric power transmission network) in the UK since 2011.
 License: MIT + file LICENSE
 Encoding: UTF-8
