--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
   lubridate (>= 1.6.0),
   magrittr (>= 1.5),
   rlang (>= 0.2.1),
+  tsibble(>= 0.8.5),
   xts (>= 0.10-1),
   zoo (>= 1.8-0)
 Suggests:
