--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Suggests:
     knitr,
     rmarkdown,
     remotes,
-    TSstudio
+    TSstudio,
+    testthat
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 URL: https://github.com/RamiKrispin/UKgrid
