--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,13 @@ Package: UKgrid
 Type: Package
 Title: The UK National Electricity Transmission System Dataset
 Version: 0.1.3
-Authors@R: person("Rami", "Krispin", email = "rami.krispin@gmail.com",
-  role = c("aut", "cre"))
+Authors@R: c(person("Rami", "Krispin", 
+                    email = "rami.krispin@gmail.com",
+                    role = c("aut", "cre")),
+             person("Lior", "Krispin", 
+                    email = "lior.krispin1@gmail.com",
+                    role = c("aut"))
+             )
 Maintainer: Lior Krispin <lior.krispin1@gmail.com>
 Description: A time series of the national grid demand (high-voltage electric power transmission network) in the UK since 2011.
 License: MIT + file LICENSE
