--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,5 @@ Suggests:
     TSstudio,
     testthat
 RoxygenNote: 7.1.0
-URL: https://github.com/RamiKrispin/UKgrid
+URL: https://ramikrispin.github.io/UKgrid/, https://github.com/RamiKrispin/UKgrid
 BugReports: https://github.com/RamiKrispin/UKgrid/issues
